--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-transition-group": "^4.4.5",
+    "react-typist": "^2.0.5",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
