--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.13.8",
     "react-transition-group": "^4.4.5",
     "react-typist": "^2.0.5",
     "tailwind-merge": "^2.3.0"
