--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-spinners": "^0.13.8",
     "react-transition-group": "^4.4.5",
     "react-typist": "^2.0.5",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
